--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,6 @@
-.navbar{
+nav{
     height: 5rem;
-    width:100vw;
-    /* max-width: 75rem; */
+    width:100%;
     margin: 2rem auto;
     padding: 2rem;
     display: flex;
@@ -20,12 +19,7 @@
     width: 5rem;
     
 }
-.div-logo{
-padding-left:10%;
-}
-.div-btn{
-    padding-right:10%;
-}
+
 .menuLink{
     color: white;
     cursor: pointer;
@@ -46,7 +40,6 @@ padding-left:10%;
     color: black;
     border-radius: 20px;
     padding: 0.75rem;
-    /* color: white; */
     
 }
 
@@ -58,4 +51,44 @@ padding-left:10%;
     height: 1rem;
     width: 1rem;
     margin: 1rem;
+}
+.hamburger {
+    display: none;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+.navbar-menu {
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .navbar-menu {
+        display: none; /* Hidden by default */
+        flex-direction: column; /* Stack items vertically */
+        background-color: rgb(30, 30, 30);
+        width: 100%;
+        padding: 1rem;
+        position: absolute;
+        top: 5rem;
+        right: 0;
+        z-index: 3;
+    }
+
+    .navbar-menu.active {
+        display: flex; /* Show menu when active */
+    }
+
+    .hamburger {
+        display: block; /* Show hamburger icon on smaller screens */
+    }
+
+    .menuLink {
+        margin: 1rem 0; /* Add spacing between vertical items */
+    }
+
+    .div-btn {
+        margin-top: 1rem;
+    }
 }
