--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,14 +1,22 @@
+
+
 .portfolio-container {
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap; /* Allows items to wrap to the next line if necessary */
+    flex-wrap: wrap; 
     gap: 20px;
+    /* background-color: red; */
+    width: 90%;
+    
+    margin: auto;
+    /* box-sizing: border-box; */
   }
   
   .portfolio-item {
     width: 250px;
     text-align: center;
     margin-bottom: 40px;
+    
   }
   
   .image-wrapper {
@@ -54,7 +62,7 @@
   .github-link {
     display: block;
     margin-top: 10px;
-    color: #0077b5; /* LinkedIn-like blue for the GitHub link */
+    color: #0077b5; 
     text-decoration: none;
     font-size: 14px;
   }
@@ -71,4 +79,12 @@
     padding: 10px;
     border-left: 2px solid #ccc;
   }
-  
+ 
+  /* @media (max-width: 768px) {
+    .portfolio-container {
+      justify-content: center; 
+    }
+
+    .portfolio-item {
+      width: 100%; 
+  } */
