--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,18 @@ code {
 html {
   scroll-behavior: smooth;
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  background: transparent;
+}
+
+body{
+  background-color: #1e1e1e;
+  color: white;
+  overflow: hidden;
+  overflow-y: scroll;
+}
