--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -1,4 +1,18 @@
-
+.heading{
+  text-align: center;
+  font-size: 1.5rem;
+    color:#c8ff00;
+    font-weight: 500;
+    background-color: rgba(50, 50, 50);
+    width: 90%;
+    /* display: flex;
+    flex-direction: row; */
+    margin: 1em auto;
+    border-radius: 0.5rem;
+    padding: 1rem 2rem; 
+    
+    
+}
 .resume-main{
     font-size: 16px;
     font-weight: 500;
@@ -10,10 +24,12 @@
     border-radius: 0.5rem;
     gap: 1em;
     flex-wrap: wrap; 
+    
 }
 
 .sidebar-item{
     width: 90%;
+    
     
 }
 .resume-sidebar{
@@ -29,7 +45,6 @@
     justify-content: right;
     align-items: center;
     padding: 1rem; 
-    /* change */
     
 }
 .avatarImg{
@@ -44,16 +59,16 @@
     font-weight: 500;
     text-align: justify;
 }
-.resume-content > h1{
+/* .resume-content > h1{
     font-size: 2rem;
     text-align: center;
     color:#c8ff00;
     font-weight: 500;
-}
+} */
 thead{
     text-align: left;
     font-size: 1.5rem;
-    color:#c8ff0089;
+    color:#c8ff00;
   }
   tbody{
     background-color: transparent;
@@ -74,7 +89,7 @@ thead{
     object-position: 50% 50%;
   }
 .colored-bg{
-    background-color: #c8ff003c;
+    background-color: #c8ff0048;
 }
   .bottomLineSeparator {
     border-bottom: 0.05cm solid white;
@@ -97,17 +112,29 @@ thead{
   a:visited {
     color: inherit; 
   }
+  .linkColor{
+    color:#c8ff00b5;
+  }
+  .underline{
+    text-decoration: underline;
+  }
 .size-16{
     font-size: 16;
     text-decoration: underline;
 }
 .padding-20{
-  padding: 20px;
+  padding: 15px;
+}
+.sidebar-name{
+    font-size: 1rem;
+    text-align: center;
+    margin-top: -10px;
+    font-weight: 500;
 }
 
 @media (max-width: 1024px) {
   .resume-main {
-      flex-direction: column-reverse; /* Stack the sidebar and content on top of each other */
+      flex-direction: column; /* Stack the sidebar and content on top of each other */
   }
 
   .resume-sidebar {
@@ -155,5 +182,14 @@ thead{
 
   .menuLink {
       font-size: 14px;
+  }
+  li.indented {
+    padding-left: 0; /* Remove indentation */
+    margin-left: 0;  /* Also reset margin if necessary */
+  }
+  span.indented {
+    padding-left: 0; /* Remove indentation */
+    margin-left: 0;  /* Also reset margin if necessary */
+    /* margin-right: 2px; */
   }
 }
